--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "prepare": "husky install",
-    "test": "react-scripts test -watchAll=false",
+    "test": "react-scripts test --watchAll=false",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
