--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "prepare": "husky install",
     "test": "react-scripts test --watchAll=false",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
@@ -58,6 +59,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "enzyme": "^3.11.0",
+    "gh-pages": "^3.2.3",
     "husky": "^7.0.2"
   }
 }
