--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://gabrieldonas.github.io/bin2dec-typescript/",
   "name": "bin2dec-react",
   "version": "0.1.0",
   "private": true,
@@ -24,6 +25,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "prepare": "husky install",
     "test": "react-scripts test --watchAll=false",
